<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/ic_favorite"
        android:icon="@drawable/ic_baseline_star_24_white"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/switch_theme"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/dark_mode"
        app:showAsAction="collapseActionView|always" />

</menu>