<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_star_border_24"
        app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_item_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/img_item_photo"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_location"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toEndOf="@+id/img_location"
        app:layout_constraintTop_toTopOf="@+id/img_location" />

    <TextView
        android:id="@+id/repo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dummy_repo"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_repo"
        app:layout_constraintEnd_toStartOf="@+id/followers_value"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/followers_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/dummy_followers"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/img_item_photo"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

    <TextView
        android:id="@+id/following_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/dummy_following"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/followers_value" />

    <TextView
        android:id="@+id/tv_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/repo"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/following"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toEndOf="@+id/tv_followers" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followers_value">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="409dp"
        android:layout_height="303dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_item_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_item_photo"
        app:layout_constraintStart_toStartOf="@+id/img_item_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="27dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:srcCompat="@drawable/ic_baseline_room_24" />

    <ImageView
        android:id="@+id/img_company"
        android:layout_width="27dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_location"
        app:layout_constraintTop_toBottomOf="@+id/img_location"
        app:srcCompat="@drawable/ic_baseline_apartment_24" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="8dp"
        android:singleLine="false"
        android:text="@string/company"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@+id/img_company"
        app:layout_constraintTop_toTopOf="@+id/img_company" />


</androidx.constraintlayout.widget.ConstraintLayout>